removed nganimate to speed up rendering of html

--- a/background.css
+++ b/background.css
@@ -1,4 +1,8 @@
 /* CSS */
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 .gridWrapper {
       overflow: hidden;
       margin: 5px;
