Refined Queue Queries
    ImageTable.php
    Image.php
    Queue.php
    - Redesigned the queries to be more random, as well as display
    the users status of the image

    background.css
    whatadesktop.html
    navigation.js
    - Saved/Deleted is updated when scrolling through the carousel

--- a/public/css/background.css
+++ b/public/css/background.css
@@ -98,8 +98,14 @@ transition: opacity 2s ease-in; /* vendorless fallback */
     outline:0;
 }
 
-.navbar-default .btn:hover {
+.navbar-default .btn:hover:not(.mute) {
     color:white;
+}
+
+.navbar-default .btn.mute
+{
+    cursor: default; 
+    color:#777;
 }
 
 .ctrl-menu{
