First Time Notification
    background.css
    notifications.html
    notifications.js
        Added a first time user login modal driven by cookies.
	The modal contains information about navigation the site.

    main.html
    whatadesktop.html
    whatadesktop.js
        Integrate the notification modal

--- a/public/css/background.css
+++ b/public/css/background.css
@@ -62,8 +62,44 @@ body {
     background: #202020;
 }
 
-.dropdown-menu{
-    
+.wad-a:before {
+    font-family: Arial; /* your font family here! */
+    font-weight: bold;
+    content: "A";
+}
+
+.wad-s:before {
+    font-family: Arial; /* your font family here! */
+    font-weight: bold;
+    content: 'S';
+}
+
+.wad-d:before {
+    font-family: Arial; /* your font family here! */
+    font-weight: bold;
+    content: 'D';
+}
+
+.wad-w:before {
+    font-family: Arial; /* your font family here! */
+    font-weight: bold;
+    content: 'W';
+}
+
+.wad-r:before {
+    font-family: Arial; /* your font family here! */
+    font-weight: bold;
+    content: 'R';
+}
+
+.wad-c:before {
+    font-family: Arial; /* your font family here! */
+    font-weight: bold;
+    content: 'C';
+}
+
+.wad-btn:focus {
+    outline: none;
 }
 
 #mainNav
