Carousel Focus Bug Fix
    Fixed an issue where the carousel would show a blue border
    when it were in focus (essentially alaways)

--- a/public/css/background.css
+++ b/public/css/background.css
@@ -58,6 +58,7 @@
 
 /* carousel */
 
+
 body {
     background: #202020;
 }
@@ -99,6 +100,10 @@ body {
 }
 
 .wad-btn:focus {
+    outline: none;
+}
+
+#carousel:focus {
     outline: none;
 }
 
