--- a/public/css/background.css
+++ b/public/css/background.css
@@ -196,3 +196,13 @@ transition: opacity 2s ease-in; /* vendorless fallback */
     padding-top: 7px;
     margin-bottom: 2px;
 }
+
+.filter-error {
+    padding: 15px;
+    margin-top: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    width: auto;
+}
